Fix username overflow in groups

--- a/client/src/components/Group/ProfileButton.css
+++ b/client/src/components/Group/ProfileButton.css
@@ -1,41 +1,41 @@
-.ProfileButton a{
-    color: black;
-    text-decoration: none;
+.ProfileButton a {
+  color: black;
+  text-decoration: none;
 }
 
-.ProfileButton a:hover{
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
+.ProfileButton a:hover {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
 }
 
-
-.ProfileButtonCircle{
-    display: block;
-    border-radius: 50%;
-    background-color: darkgrey;
-    width: 80px;
-    height: 80px;
-    margin: 0;
-    align-content: center;
+.ProfileButtonCircle {
+  display: block;
+  border-radius: 50%;
+  background-color: darkgrey;
+  width: 80px;
+  height: 80px;
+  margin: 0;
+  align-content: center;
+  /* align-items: center; */
 }
-.ProfileButtonIcon{
-    width: 90%;
-    height: 90%;
-    margin: 5%;
-    align-items: center;
-}
-
-.ProfileButtonIcon:hover{
-    width: 110%;
-    height: 110%;
-    margin: -5%;
+.ProfileButtonIcon {
+  width: 90%;
+  height: 90%;
+  margin: 5%;
+  align-items: center;
 }
 
-.ProfileButtonTitle{
-    font-size: 20px;
-    text-align: center;
-    text-wrap: normal;
-    word-break: break-all;
-    width: 80px;
+.ProfileButtonIcon:hover {
+  width: 110%;
+  height: 110%;
+  margin: -5%;
+}
+
+.ProfileButtonTitle {
+  font-size: 20px;
+  text-align: center;
+  text-wrap: normal;
+  /* word-break: break-all; */
+  /* width: 80px; */
 }
